--- a/i18n/de.json
+++ b/i18n/de.json
@@ -4,30 +4,30 @@
 
    "hero_title": "Erstellen Sie Ihr kostenloses QR-Menü",
    "hero_subtitle": "Empfangen Sie Bestellungen von Tischen",
-   "hero_description": "Verwandeln Sie Ihr Papier-Menü in ein vollständig digitales Erlebnis. Lassen Sie Gäste einen QR-Code scannen, um das Menü anzusehen, ihre Bestellungen vom Tisch aus aufzugeben und alle eingehenden Bestellungen von einem einzigen Dashboard aus zu verwalten.",
+   "hero_description": "Verwandeln Sie Ihr Papier-Menü in ein digitales Erlebnis. Lassen Sie Gäste einen QR-Code scannen, um das Menü anzusehen und Bestellungen vom Tisch aus aufzugeben.",
    
    "hero_cta_button": "Kostenloses Menü erstellen",
    "hero_sample_button": "Beispiel-Menü ",
 
    "highlight_1_subtitle": "Beschleunigen Sie den Service",
    "highlight_1_title": "Nehmen Sie Tischbestellungen mit einem QR-Menü entgegen",
-   "highlight_1_description": "Gäste können sofort auf Ihr Restaurant-Menü zugreifen, indem sie den QR-Code scannen, ohne eine App herunterzuladen. Mit einer benutzerfreundlichen Oberfläche können Kunden das digitale Menü durchsuchen, Artikel in ihren Warenkorb legen und Essen direkt vom Tisch aus bestellen. Die QR-Code-Bestellfunktion vereinfacht Restaurantbetriebe, beschleunigt den Service und verbessert das gesamte Restaurant-Erlebnis.",
+   "highlight_1_description": "Gäste können Ihr Menü sofort durch Scannen eines QR-Codes aufrufen. Durchsuchen Sie Artikel, fügen Sie sie zum Warenkorb hinzu und bestellen Sie direkt vom Tisch—kein App-Download erforderlich.",
 
    "highlight_2_subtitle": "Rechnungsverwaltung",
    "highlight_2_title": "Verfolgen Sie Bestellungen und Zahlungen",
-   "highlight_2_description": "Die Rechnung jedes Tisches wird in Echtzeit verfolgt. Artikel, die von Kunden oder Servicepersonal hinzugefügt werden, werden sofort in der Rechnung widergespiegelt. Kassierer können Zahlungen mit mehreren Methoden akzeptieren, einschließlich Bargeld, Kreditkarten und Gutscheinen. Sie können auch Rechnungen pro Person aufteilen, Tische zusammenführen oder übertragen und Bestellungen problemlos abschließen. Die Restaurant-Rechnungsverwaltungsfunktion gewährleistet genaue Abrechnung, schnellere Zahlungen und ein reibungsloseres Checkout-Erlebnis.",
+   "highlight_2_description": "Verfolgen Sie die Rechnung jedes Tisches in Echtzeit. Akzeptieren Sie mehrere Zahlungsmethoden, teilen Sie Rechnungen, führen Sie Tische zusammen und verwalten Sie Bestellungen von einem einzigen Dashboard aus.",
 
    "highlight_3_subtitle": "Detaillierte Statistiken",
    "highlight_3_title": "Verfolgen Sie Verkäufe und QR-Menü-Analysen",
-   "highlight_3_description": "Überwachen Sie die Leistung Ihres Restaurants mit Echtzeit-Analysen. Verfolgen Sie sofort Gesamtumsätze, Bestseller-Produkte, Zahlungsarten und Tischausgaben. Identifizieren Sie Ihre geschäftigsten Stunden und leistungsstärksten Menüpunkte mit detaillierten Restaurant-Berichtstools. Generieren Sie wöchentliche, monatliche und jährliche Verkaufsberichte, um datengesteuerte Entscheidungen zu treffen und Ihr Geschäft zu erweitern.",
+   "highlight_3_description": "Überwachen Sie die Leistung mit Echtzeit-Analysen. Verfolgen Sie Verkäufe, Top-Produkte, Zahlungsarten und erstellen Sie detaillierte Berichte für datengesteuerte Entscheidungen.",
 
   "highlight_4_subtitle": "Kitchen Display System",
   "highlight_4_title": "Senden Sie Bestellungen sofort an die Küche",
-  "highlight_4_description": "Bestellungen, die über das QR-Menü aufgegeben werden, werden sofort auf dem Küchenbildschirm angezeigt. Das Küchenpersonal kann klar sehen, welche Artikel bestellt wurden, von welchem Tisch und wann. Bestellungen werden priorisiert, die Zubereitung wird rationalisiert und der Servicefluss wird effizient über das Küchen-Dashboard verwaltet.",
+  "highlight_4_description": "Bestellungen erscheinen sofort auf dem Küchenbildschirm. Das Personal kann Artikel, Tischnummern und Zeitpunkte sehen. Verwalten Sie die Zubereitung effizient mit priorisierten Bestellungen.",
 
   "highlight_5_subtitle": "Mehrsprachige Unterstützung",
   "highlight_5_title": "Unterstützung für 50+ Sprachen mit automatischer Übersetzung",
-  "highlight_5_description": "Machen Sie Ihr digitales Menü für alle zugänglich mit mehrsprachiger Unterstützung und automatischer Übersetzung. MenuMix übersetzt Ihr QR-Code-Menü sofort in mehr als 50 Sprachen. Gäste können Ihr Menü in ihrer bevorzugten Sprache ansehen, ohne eine App herunterzuladen. Diese Funktion verbessert das Restaurant-Erlebnis für internationale Kunden und hilft Ihnen, ein globales Publikum mit Leichtigkeit zu bedienen.",
+  "highlight_5_description": "Unterstützen Sie 50+ Sprachen mit automatischer Übersetzung. Ihr QR-Menü ist sofort in mehreren Sprachen verfügbar—kein App-Download für Gäste erforderlich.",
 
  "pricing_subtitle": "Preise",
  "pricing_title": "Starten Sie kostenlos - jederzeit upgraden",
