--- a/i18n/es.json
+++ b/i18n/es.json
@@ -4,30 +4,30 @@
 
    "hero_title": "Crea tu Carta Digital QR Gratis",
    "hero_subtitle": "Recibe Pedidos desde las Mesas",
-   "hero_description": "Convierte tu menú en papel en un Menú Digital completamente gratis. Los clientes pueden escanear un código QR para ver la carta, hacer pedidos desde la mesa y gestionar todos los pedidos desde un solo panel de control.",
+   "hero_description": "Convierte tu menú en papel en una experiencia digital. Los clientes pueden escanear un código QR para ver la carta y hacer pedidos desde la mesa.",
 
    "hero_cta_button": "Crear Carta Gratis",
    "hero_sample_button": "Carta Ejemplo",
 
    "highlight_1_subtitle": "Agiliza el Servicio",
    "highlight_1_title": "Pide desde la mesa con carta QR",
-   "highlight_1_description": "Tus clientes acceden a la carta digital escaneando un código QR, sin descargar apps. Con una interfaz rápida e intuitiva, pueden ver el menú, elegir platos y pedir directamente desde su mesa. Mejora la experiencia y acelera la rotación de mesas.",
+   "highlight_1_description": "Los clientes pueden acceder instantáneamente a tu carta escaneando un código QR. Navega por los platos, añádelos al carrito y pide directamente desde la mesa—no se requiere descargar ninguna app.",
 
    "highlight_2_subtitle": "Gestión de Pedidos y Pagos",
    "highlight_2_title": "Control total de cuentas y cobros",
-   "highlight_2_description": "Ve en tiempo real qué ha pedido cada mesa. Acepta pagos en efectivo, tarjeta o vales. Divide la cuenta, combina mesas o transfiere pedidos en segundos. Todo está conectado para un servicio más rápido y preciso.",
+   "highlight_2_description": "Rastrea la cuenta de cada mesa en tiempo real. Acepta varios métodos de pago, divide cuentas, combina mesas y gestiona pedidos desde un solo panel.",
 
    "highlight_3_subtitle": "Estadísticas de tu Carta Digital",
    "highlight_3_title": "Ventas, productos más pedidos y horas pico",
-   "highlight_3_description": "Consulta ventas por mesa, productos favoritos, formas de pago y más. Con informes automáticos diarios, semanales o mensuales, puedes optimizar tu menú y aumentar tus ingresos.",
+   "highlight_3_description": "Monitorea el rendimiento con análisis en tiempo real. Rastrea ventas, productos más vendidos, tipos de pago y genera informes detallados para decisiones basadas en datos.",
 
   "highlight_4_subtitle": "Pantalla de Cocina Digital",
   "highlight_4_title": "Envía los Pedidos a Cocina al Instante",
-  "highlight_4_description": "Los pedidos realizados a través de la Carta Digital se muestran al instante en la pantalla de cocina. El personal puede ver claramente qué platos se pidieron, en qué mesa y a qué hora. Los pedidos se priorizan, la preparación se agiliza y el flujo del servicio se gestiona de forma eficiente desde el panel de cocina.",
+  "highlight_4_description": "Los pedidos aparecen instantáneamente en la pantalla de cocina. El personal puede ver platos, números de mesa y horarios. Gestiona la preparación con eficiencia con pedidos priorizados.",
 
   "highlight_5_subtitle": "Soporte Multilingüe",
   "highlight_5_title": "Compatible con más de 50 idiomas con traducción automática",
-  "highlight_5_description": "Haz que tu carta digital sea accesible para todos con soporte multilingüe y traducción automática. MenuMix traduce al instante tu carta digital con código QR a más de 50 idiomas. Los clientes pueden ver la carta en su idioma preferido sin necesidad de descargar ninguna app. Esta función mejora la experiencia gastronómica para clientes internacionales y te ayuda a atender a una audiencia global con facilidad.",
+  "highlight_5_description": "Soporte para 50+ idiomas con traducción automática. Tu carta QR está instantáneamente disponible en varios idiomas—no se requiere descargar ninguna app para los clientes.",
 
    "pricing_subtitle": "Precios",
    "pricing_title": "Empieza Gratis - Mejora Cuando Quieras",
