--- a/i18n/it.json
+++ b/i18n/it.json
@@ -4,30 +4,30 @@
 
    "hero_title": "Crea il Tuo Menu QR Gratuito",
    "hero_subtitle": "Ricevi ordini dai tavoli",
-   "hero_description": "Trasforma il tuo menu cartaceo in un'esperienza completamente digitale. Lascia che gli ospiti scansionino un codice QR per visualizzare il menu, fare ordini dal tavolo e gestire tutti gli ordini in arrivo da un'unica dashboard.",
+   "hero_description": "Trasforma il tuo menu cartaceo in un'esperienza digitale. Lascia che gli ospiti scansionino un codice QR per visualizzare il menu e fare ordini dal tavolo.",
    
    "hero_cta_button": "Crea Menu Gratuito",
    "hero_sample_button": "Menu di Esempio ",
 
    "highlight_1_subtitle": "Accelera il Servizio",
    "highlight_1_title": "Accetta Ordini dal Tavolo con un Menu QR",
-   "highlight_1_description": "Gli ospiti possono accedere istantaneamente al menu del tuo ristorante scansionando il codice QR senza scaricare alcuna app. Con un'interfaccia user-friendly, i clienti possono sfogliare il menu digitale, aggiungere articoli al carrello e ordinare cibo direttamente dal tavolo. La funzione di ordinazione tramite codice QR semplifica le operazioni del ristorante, accelera il servizio e migliora l'esperienza complessiva del ristorante.",
+   "highlight_1_description": "Gli ospiti possono accedere istantaneamente al tuo menu scansionando un codice QR. Sfoglia gli articoli, aggiungili al carrello e ordina direttamente dal tavolo—nessun download di app richiesto.",
 
    "highlight_2_subtitle": "Gestione Conti",
    "highlight_2_title": "Traccia ordini e pagamenti",
-   "highlight_2_description": "Il conto di ogni tavolo viene tracciato in tempo reale. Gli articoli aggiunti dai clienti o dal personale vengono istantaneamente riflessi nel conto. I cassieri possono accettare pagamenti utilizzando più metodi, inclusi contanti, carte di credito e buoni. Puoi anche dividere i conti per persona, unire o trasferire tavoli e chiudere ordini con facilità. La funzione di gestione conti del ristorante garantisce una fatturazione accurata, pagamenti più rapidi e un'esperienza di checkout più fluida.",
+   "highlight_2_description": "Traccia il conto di ogni tavolo in tempo reale. Accetta più metodi di pagamento, dividi i conti, unisci i tavoli e gestisci gli ordini da un'unica dashboard.",
 
    "highlight_3_subtitle": "Statistiche Dettagliate",
    "highlight_3_title": "Traccia vendite e analisi del menu QR",
-   "highlight_3_description": "Monitora le prestazioni del tuo ristorante con analisi in tempo reale. Traccia istantaneamente le vendite totali, i prodotti più venduti, i tipi di pagamento e la spesa per tavolo. Identifica le tue ore più impegnate e gli elementi del menu più performanti con strumenti di reporting dettagliati per ristoranti. Genera report di vendita settimanali, mensili e annuali per prendere decisioni basate sui dati e far crescere la tua attività.",
+   "highlight_3_description": "Monitora le prestazioni con analisi in tempo reale. Traccia vendite, prodotti più venduti, tipi di pagamento e genera report dettagliati per decisioni basate sui dati.",
 
   "highlight_4_subtitle": "Sistema Display Cucina",
   "highlight_4_title": "Invia ordini in cucina istantaneamente",
-  "highlight_4_description": "Gli ordini effettuati tramite il Menu QR vengono visualizzati istantaneamente sullo schermo della cucina. Il personale di cucina può vedere chiaramente quali articoli sono stati ordinati, da quale tavolo e quando. Gli ordini sono prioritizzati, la preparazione è semplificata e il flusso del servizio è gestito in modo efficiente tramite la dashboard della cucina.",
+  "highlight_4_description": "Gli ordini appaiono istantaneamente sullo schermo della cucina. Il personale può vedere articoli, numeri dei tavoli e orari. Gestisci la preparazione in modo efficiente con ordini prioritari.",
 
   "highlight_5_subtitle": "Supporto Multi-Lingua",
   "highlight_5_title": "Supporta 50+ lingue con traduzione automatica",
-  "highlight_5_description": "Rendi il tuo menu digitale accessibile a tutti con supporto multi-lingua e traduzione automatica. MenuMix traduce istantaneamente il tuo menu con codice QR in più di 50 lingue. Gli ospiti possono visualizzare il tuo menu nella loro lingua preferita senza scaricare alcuna app. Questa funzione migliora l'esperienza culinaria per i clienti internazionali e ti aiuta a servire un pubblico globale con facilità.",
+  "highlight_5_description": "Supporta 50+ lingue con traduzione automatica. Il tuo menu QR è istantaneamente disponibile in più lingue—nessun download di app richiesto per gli ospiti.",
 
  "pricing_subtitle": "Prezzi",
  "pricing_title": "Inizia Gratuito - Aggiorna Quando Vuoi",
