--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -4,30 +4,30 @@
 
    "hero_title": "Crie Seu Menu QR Gratuito",
    "hero_subtitle": "Receba pedidos das mesas",
-   "hero_description": "Transforme seu menu em papel em uma experiência totalmente digital. Deixe os convidados escanearem um código QR para visualizar o menu, fazer pedidos da mesa e gerenciar todos os pedidos recebidos a partir de um único painel.",
+   "hero_description": "Transforme seu menu em papel em uma experiência digital. Deixe os convidados escanearem um código QR para visualizar o menu e fazer pedidos da mesa.",
    
    "hero_cta_button": "Criar Menu Gratuito",
    "hero_sample_button": "Menu de Exemplo ",
 
    "highlight_1_subtitle": "Acelere o Serviço",
    "highlight_1_title": "Aceite Pedidos de Mesa com um Menu QR",
-   "highlight_1_description": "Os convidados podem acessar instantaneamente o menu do seu restaurante escaneando o código QR sem baixar nenhum aplicativo. Com uma interface amigável, os clientes podem navegar pelo menu digital, adicionar itens à cesta e pedir comida diretamente da mesa. O recurso de pedido por código QR simplifica as operações do restaurante, acelera o serviço e melhora a experiência gastronômica geral.",
+   "highlight_1_description": "Os convidados podem acessar instantaneamente o seu menu escaneando um código QR. Navegue pelos itens, adicione à cesta e peça diretamente da mesa—nenhum download de aplicativo necessário.",
 
    "highlight_2_subtitle": "Gestão de Contas",
    "highlight_2_title": "Acompanhe pedidos e pagamentos",
-   "highlight_2_description": "A conta de cada mesa é acompanhada em tempo real. Itens adicionados por clientes ou funcionários são instantaneamente refletidos na conta. Os caixas podem aceitar pagamentos usando vários métodos, incluindo dinheiro, cartões de crédito e vouchers. Você também pode dividir contas por pessoa, mesclar ou transferir mesas e fechar pedidos com facilidade. O recurso de gestão de contas do restaurante garante cobrança precisa, pagamentos mais rápidos e uma experiência de checkout mais suave.",
+   "highlight_2_description": "Acompanhe a conta de cada mesa em tempo real. Aceite vários métodos de pagamento, divida contas, mescle mesas e gerencie pedidos a partir de um único painel.",
 
    "highlight_3_subtitle": "Estatísticas Detalhadas",
    "highlight_3_title": "Acompanhe vendas e análises do menu QR",
-   "highlight_3_description": "Monitore o desempenho do seu restaurante com análises em tempo real. Acompanhe instantaneamente as vendas totais, produtos mais vendidos, tipos de pagamento e gastos por mesa. Identifique suas horas mais movimentadas e itens de menu de melhor desempenho com ferramentas detalhadas de relatórios de restaurante. Gere relatórios de vendas semanais, mensais e anuais para tomar decisões baseadas em dados e expandir seu negócio.",
+   "highlight_3_description": "Monitore o desempenho com análises em tempo real. Acompanhe vendas, produtos mais vendidos, tipos de pagamento e gere relatórios detalhados para decisões baseadas em dados.",
 
   "highlight_4_subtitle": "Sistema de Display da Cozinha",
   "highlight_4_title": "Envie pedidos para a cozinha instantaneamente",
-  "highlight_4_description": "Os pedidos feitos através do Menu QR são instantaneamente exibidos na tela da cozinha. A equipe da cozinha pode ver claramente quais itens foram pedidos, por qual mesa e quando. Os pedidos são priorizados, a preparação é otimizada e o fluxo de serviço é gerenciado com eficiência através do painel da cozinha.",
+  "highlight_4_description": "Os pedidos aparecem instantaneamente na tela da cozinha. A equipe pode ver itens, números das mesas e horários. Gerencie a preparação com eficiência com pedidos priorizados.",
 
   "highlight_5_subtitle": "Suporte Multi-Idioma",
   "highlight_5_title": "Suporte para mais de 50 idiomas com tradução automática",
-  "highlight_5_description": "Torne seu menu digital acessível a todos com suporte multi-idioma e tradução automática. O MenuMix traduz instantaneamente seu menu com código QR para mais de 50 idiomas. Os convidados podem ver seu menu em seu idioma preferido sem baixar nenhum aplicativo. Este recurso melhora a experiência gastronômica para clientes internacionais e ajuda você a atender um público global com facilidade.",
+  "highlight_5_description": "Suporte para 50+ idiomas com tradução automática. Seu menu QR está instantaneamente disponível em vários idiomas—nenhum download de aplicativo necessário para os convidados.",
 
  "pricing_subtitle": "Preços",
  "pricing_title": "Comece Grátis - Atualize Quando Quiser",
