update description texts

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -4,7 +4,7 @@
 
    "hero_title": "Erstellen Sie Ihr kostenloses QR-Menü",
    "hero_subtitle": "Empfangen Sie Bestellungen von Tischen",
-   "hero_description": "Verwandeln Sie Ihr Papier-Menü in ein digitales Erlebnis. Lassen Sie Gäste einen QR-Code scannen, um das Menü anzusehen und Bestellungen vom Tisch aus aufzugeben.",
+   "hero_description": "Kostenloses QR-Menü für Ihr Restaurant—keine Kreditkarte erforderlich. Erstellen Sie Ihr digitales Menü in Minuten, nehmen Sie Tischbestellungen sofort entgegen und wachsen Sie Ihr Geschäft ohne Startkosten.",
    
    "hero_cta_button": "Kostenloses Menü erstellen",
    "hero_sample_button": "Beispiel-Menü ",
