--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,7 +4,7 @@
 
    "hero_title": "Create Free QR Menu",
    "hero_subtitle": "Receive orders from tables",
-   "hero_description": "Transform your paper menu into a digital experience. Let guests scan a QR code to view the menu and place orders from their table.",
+   "hero_description": "Free QR Menu for your restaurant—no credit card required. Create your digital menu in minutes, accept table orders instantly, and grow your business with zero upfront costs.",
    
    "hero_cta_button": "Create Free Menu",
    "hero_sample_button": "Sample Menu ",
