--- a/i18n/es.json
+++ b/i18n/es.json
@@ -4,7 +4,7 @@
 
    "hero_title": "Crea tu Carta Digital QR Gratis",
    "hero_subtitle": "Recibe Pedidos desde las Mesas",
-   "hero_description": "Convierte tu menú en papel en una experiencia digital. Los clientes pueden escanear un código QR para ver la carta y hacer pedidos desde la mesa.",
+   "hero_description": "Carta Digital QR Gratis para tu restaurante—sin tarjeta de crédito. Crea tu menú digital en minutos, acepta pedidos de mesas al instante y haz crecer tu negocio sin costos iniciales.",
 
    "hero_cta_button": "Crear Carta Gratis",
    "hero_sample_button": "Carta Ejemplo",
