--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -4,7 +4,7 @@
 
    "hero_title": "Créez votre Menu QR Gratuit",
    "hero_subtitle": "Recevez les commandes des tables",
-   "hero_description": "Transformez votre menu papier en une expérience numérique. Laissez les clients scanner un code QR pour voir le menu et passer leurs commandes depuis la table.",
+   "hero_description": "Menu QR Gratuit pour votre restaurant—aucune carte de crédit requise. Créez votre menu numérique en quelques minutes, acceptez les commandes de table instantanément et développez votre activité sans frais initiaux.",
    
    "hero_cta_button": "Créer un Menu Gratuit",
    "hero_sample_button": "Menu Exemple ",
