--- a/i18n/it.json
+++ b/i18n/it.json
@@ -4,7 +4,7 @@
 
    "hero_title": "Crea il Tuo Menu QR Gratuito",
    "hero_subtitle": "Ricevi ordini dai tavoli",
-   "hero_description": "Trasforma il tuo menu cartaceo in un'esperienza digitale. Lascia che gli ospiti scansionino un codice QR per visualizzare il menu e fare ordini dal tavolo.",
+   "hero_description": "Menu QR Gratuito per il tuo ristorante—nessuna carta di credito richiesta. Crea il tuo menu digitale in pochi minuti, accetta ordini dai tavoli all'istante e fai crescere il tuo business senza costi iniziali.",
    
    "hero_cta_button": "Crea Menu Gratuito",
    "hero_sample_button": "Menu di Esempio ",
