--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -4,7 +4,7 @@
 
    "hero_title": "Crie Seu Menu QR Gratuito",
    "hero_subtitle": "Receba pedidos das mesas",
-   "hero_description": "Transforme seu menu em papel em uma experiência digital. Deixe os convidados escanearem um código QR para visualizar o menu e fazer pedidos da mesa.",
+   "hero_description": "Menu QR Gratuito para seu restaurante—sem necessidade de cartão de crédito. Crie seu menu digital em minutos, aceite pedidos das mesas instantaneamente e faça seu negócio crescer sem custos iniciais.",
    
    "hero_cta_button": "Criar Menu Gratuito",
    "hero_sample_button": "Menu de Exemplo ",
