--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -4,7 +4,7 @@
 
    "hero_title": "Ücretsiz QR Menü oluştur",
    "hero_subtitle": "Masadan sipariş al",
-   "hero_description": "Kağıt menünüzü dijital bir deneyime dönüştürün. Misafirleriniz QR kodu okutarak menüyü görüntüleyip masadan sipariş verebilir.",
+   "hero_description": "Restoranınız için ücretsiz QR Menü—kredi kartı gerekmez. Dijital menünüzü dakikalar içinde oluşturun, masalardan anında sipariş alın ve sıfır başlangıç maliyetiyle işletmenizi büyütün.",
    "hero_cta_button": "Ücretsiz Menü Oluştur",
    "hero_sample_button": "Örnek Menü",
 
